[package]
name = "chsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '0.8.4'
rand_chacha = '0.3.1'
rand_distr = '0.4.2'
num-traits="0.2.14"
num-complex="0.4.0"
rustfft = '6.0.1'
itertools-num='0.1.3'
ndarray-npy = {version="0.8.1", default-features = true}
rspfb={path="../rspfb"}

[dependencies.ndarray]
features = ['rayon']
version = '0.15.3'
