[dependencies]
itertools-num = '0.1.3'
num-complex = '0.4.0'
num-traits = '0.2.14'
num_cpus = '1.13.1'
rand = '0.8.5'
rand_chacha = '0.3.1'
rand_distr = '0.4.3'
rustfft = '6.0.1'

[dependencies.ndarray]
features = ['rayon']
version = '0.15.4'

[dependencies.ndarray-npy]
default-features = true
version = '0.8.1'

[dependencies.rsdsp]
path = '../rsdsp'

[package]
edition = '2021'
name = 'chsim'
version = '0.1.0'
