[dependencies]
itertools-num = '0.1.3'
num = '0.4.1'
num_cpus = '1.16.0'
rand = '0.9.0-alpha.1'
rand_chacha = '0.9.0-alpha.1'
rand_distr = '0.5.0-alpha.1'
rustfft = '6.2.0'

[dependencies.ndarray]
features = ['rayon']
version = '0.15.6'

[dependencies.ndarray-npy]
default-features = true
version = '0.8.1'

[dependencies.rsdsp]
path = '../rsdsp'

[package]
edition = '2021'
name = 'chsim'
version = '0.1.0'
